rm card body padding on mobile and increased font size, fixed arrow overlay on tablets

--- a/src/components/styles/Speakers.css
+++ b/src/components/styles/Speakers.css
@@ -16,6 +16,8 @@
 .speaker-card .card-body {
     text-align: center;
     height: 7em;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .speaker-card .card-title {
@@ -24,10 +26,10 @@
 
 @media (max-width: 576px) { 
     .speaker-card .card-title {
-        font-size: 1em;
+        font-size: 1.2em;
     }
     .speaker-card .card-text {
-        font-size: 0.8em;
+        font-size: 0.9em;
     }
 }
 
@@ -39,7 +41,12 @@
     background-clip: content-box, border-box;
 
     animation: spin infinite 7s linear;
-    transition: border-width 0.1s linear;
+    transition: border-width 0.09s linear;
+}
+
+.speaker-border .card-img-top {
+    border-radius: 50%;
+    animation: anti-spin infinite 7s linear;
 }
 
 .speaker-border:hover{
@@ -79,6 +86,19 @@
 }
 
 @media (max-width: 576px) { 
+  .arrow-overlay {
+      height: 2.6em;
+      width: 2.6em;
+
+      margin-top: 67%;
+      margin-left: 60%;
+  }
+  .fa-arrow-right {
+      font-size: 1.1em;
+  }
+}
+
+@media (max-width: 420px) { 
     .arrow-overlay {
         height: 2em;
         width: 2em;
@@ -88,13 +108,7 @@
     }
     .fa-arrow-right {
         font-size: 0.9em;
-       
     }
-}
-
-.speaker-border .card-img-top {
-    border-radius: 50%;
-    animation: anti-spin infinite 7s linear;
 }
 
 @keyframes spin {
